# rust-tracing-examples

./: Cargo.toml  README.md
examples/opentelemetry-zipkin/: Cargo.toml  README.md
examples/opentelemetry-zipkin-tokio-main/: Cargo.toml
examples/opentelemetry-zipkin-tokio-main/src/: main.rs
examples/opentelemetry-zipkin/src/: main.rs
