[package]
name = "tracing-examples-opentelemetry-zipkin-tokio-main"
version = "0.0.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []


[dependencies]
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-zipkin = { version = "0.14" }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-attributes = { version = "0.1" }
tracing-opentelemetry = { version = "0.16" }
tracing-subscriber = { version = "0.3" }
